Added search to recipes and linked the client search bar to a get request

--- a/client/index.html
+++ b/client/index.html
@@ -13,5 +13,7 @@
 		<h3>Just like grandma used to make</h3>
 		<input type="text" id="searchBox">
 	</header>
+
+	<script src="./js/index.js"></script>
 </body>
 </html>
