Set out a design for the result cards

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="css/desktop.css">
 	<title>Cannibal Cookbook</title>
 </head>
@@ -13,6 +14,45 @@
 		<h3>Just like grandma used to make</h3>
 		<input type="text" id="searchBox">
 	</header>
+
+	<div id="searchContainer">
+		<!-- <div class="result">
+			<div class="resultImg" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/228px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg')"></div>
+
+			<div class="resultinfo">
+				<div class="resultTitle">
+					<h2>Leek & Albert Einstein parcels</h2>
+				</div>
+				<div class="resultDescription">
+					German-born physicist and developer of the theory of relativity
+				</div>
+				<div class="resultFooter">
+					<div class="resultsCooksIn"></div>Cooks in: 40mins</div>
+					<div class="resultsServes"></div>Serves: 4</div>
+				</div>
+			</div>
+			
+		</div> -->
+
+		<div class="resultCard">
+
+			<div class="resultImg" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/228px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg')">
+			</div>
+
+			<div class="resultTitle">
+				Leek & Albert Einstein parcels
+			</div>
+			<div class="resultDescription">
+				German-born physicist and developer of the theory of relativity
+			</div>
+			<div class="resultCooksIn">
+				Cooks In: 40 mins
+			</div>
+			<div class="resultServes">
+				Serves: 4
+			</div>
+		</div>
+	</div>
 
 	<script src="./js/index.js"></script>
 </body>
