Started the layout for the recipe page

--- a/client/index.html
+++ b/client/index.html
@@ -16,25 +16,7 @@
 	</header>
 
 	<div id="searchContainer">
-		<!-- <div class="result">
-			<div class="resultImg" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/228px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg')"></div>
-
-			<div class="resultinfo">
-				<div class="resultTitle">
-					<h2>Leek & Albert Einstein parcels</h2>
-				</div>
-				<div class="resultDescription">
-					German-born physicist and developer of the theory of relativity
-				</div>
-				<div class="resultFooter">
-					<div class="resultsCooksIn"></div>Cooks in: 40mins</div>
-					<div class="resultsServes"></div>Serves: 4</div>
-				</div>
-			</div>
-			
-		</div> -->
-
-		<div class="resultCard">
+		<!-- <div class="resultCard">
 
 			<div class="resultImg" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/228px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg')">
 			</div>
@@ -46,11 +28,64 @@
 				German-born physicist and developer of the theory of relativity
 			</div>
 			<div class="resultCooksIn">
-				Cooks In: 40 mins
+				Cooks in 40m
 			</div>
 			<div class="resultServes">
-				Serves: 4
+				Serves 4
 			</div>
+		</div> -->
+	</div>
+	<div id="recipeContainer">
+		<div id="recipeLeft">
+
+			<img id="recipePersonImage" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/228px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"></img>
+
+			<div id="recipeIngredients">
+				<h2>Ingredients</h2><br>
+				<ul>
+					<li>50g unsalted butter</li>
+					<li>2 medium leeks</li>
+					<li>4 (*) fillets, skin off, boned</li>
+					<li>8 tablespoons dry vermouth , or dry white wine</li>
+					<li>4 tablespoons organic chicken stock</li>
+					<li>1 tablespoon baby capers</li>
+					<li>A few sprigs of fresh dill</li>
+				</ul>
+			</div>
+
+		</div>
+	
+		<div id="recipeMain">
+
+			<img id="recipeFoodImage" src="https://img.jamieoliver.com/jamieoliver/recipe-database/xtra_med/58393575.jpg?tr=w-400">
+
+			<div id="recipeInfo">
+				<h1 id="recipeTitle">Leek & Albert Einstein parcels <hr></h1>
+
+				<div id="recipeIntro">
+					These are simple and elegant – and easy on the washing-up. You could always prep these parcels the evening before, then simply pop them in the oven as soon as you get in the door. <hr>
+				</div>
+
+				<div id="recipeCookingInfo">
+					Cooks In: 40 minutes
+					<br>
+					Serves: 4
+				</div>
+			</div>
+	
+			<div id="recipeMethod">
+				<h2>Method</h2><br>
+				<ol>
+					<li>Preheat the oven to 200ºC/400ºF/gas 6.</li><br>
+					<li>Melt the butter in a non-stick frying pan over a medium heat. Cut out four 40cm squares of greaseproof paper and brush with a little melted butter. Trim the leeks, then julienne or cut into matchsticks and sauté in the butter for 6 to 8 minutes, or until lightly golden. Season well.</li><br>
+					<li>Divide half of the leeks between the paper. Place a (*) fillet on each, season, and spoon over 2 tablespoons of vermouth, 1 tablespoon of stock and the remaining leeks. Scatter over the capers. Finely chop and scatter over the dill. Fold up the sides of the paper and scrunch up to make secure parcels.</li><br>
+					<li>Place the parcels on a baking sheet and cook for 15 minutes, or until (*) is cooked. Open the parcels at the table.</li>
+				</ol>
+			</div>
+		</div>
+
+		<div id="recipeRight">
+			stuff
 		</div>
 	</div>
 
