--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+
 	<link rel="stylesheet" href="css/desktop.css">
+	<link rel="stylesheet" href="css/responsive.css">
 	<title>Cannibal Cookbook</title>
 </head>
 <body>
@@ -36,7 +39,7 @@
 		</div> -->
 	</div>
 	<div id="recipeContainer">
-		<!-- <div id="recipeLeft">
+		<div id="recipeLeft">
 
 			<img id="recipePersonImage" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/228px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"></img>
 
@@ -85,11 +88,12 @@
 		</div>
 
 		<div id="recipeRight">
+			<h2>Recommened</h2>
 			<div class="recommended">
 				<div class="recommendedImg" style="background-image: url('https://img.jamieoliver.com/jamieoliver/recipe-database/xtra_med/55846373.jpg?tr=w-400')"></div>
 				<div class="recommendedTitle"><h3>One-pan fabulous Hans Albert Einstein</h3></div>
 			</div>
-		</div> -->
+		</div>
 	</div>
 
 	<script src="./js/index.js"></script>
