Now I'm finished with the responsiveness

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 	<header>
 		<h1>The Cannibal Cookbook</h1>
 		<h3>Just like grandma used to make</h3>
-		<input type="text" id="searchBox">
+		<input type="text" id="searchBox" placeholder="Search">
 	</header>
 
 	<div id="searchContainer">
