Added a homepage and made the client disconnect from the server gracefully

--- a/client/index.html
+++ b/client/index.html
@@ -39,7 +39,7 @@
 		</div> -->
 	</div>
 	<div id="recipeContainer">
-		<div id="recipeLeft">
+		<!-- <div id="recipeLeft">
 
 			<img id="recipePersonImage" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Einstein_1921_by_F_Schmutzer_-_restoration.jpg/228px-Einstein_1921_by_F_Schmutzer_-_restoration.jpg"></img>
 
@@ -93,7 +93,7 @@
 				<div class="recommendedImg" style="background-image: url('https://img.jamieoliver.com/jamieoliver/recipe-database/xtra_med/55846373.jpg?tr=w-400')"></div>
 				<div class="recommendedTitle"><h3>One-pan fabulous Hans Albert Einstein</h3></div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 	<script src="./js/index.js"></script>
