Added all the comment stuff but it is all broken

--- a/client/index.html
+++ b/client/index.html
@@ -95,6 +95,35 @@
 			</div>
 		</div> -->
 	</div>
+	<div id="commentsContainer">
+		<!-- <h2>Comments</h2>
+		<div id="commentsMain">
+			<div class="comment">
+				<h4>Name</h4>
+				<p>comment</p>
+			</div>
+			<div class="comment">
+				<h4>Name</h4>
+				<p>comment</p>
+			</div>
+			<div class="comment">
+				<h4>Name</h4>
+				<p>comment</p>
+			</div>
+
+			<div id="addCommentForm">
+				<br>
+				<form action="#">
+					<input type="text" id="nameInput" placeholder="Name"> <br>
+					<input type="text" id="commentInput" placeholder="Comment">
+				</form>
+			</div>
+
+			<div id="addComment">
+				<img src="./assets/add.svg" alt=""><span id="addCommentLabel">Add</span>
+			</div>
+		</div> -->
+	</div>
 
 	<script src="./js/index.js"></script>
 </body>
